# yun_bot

./: .gitignore  README.md  bot.py  pyproject.toml
agent_app/: __init__.py
agent_app/agent/: react_agent.py
agent_app/agent/tools/: agent_tools.py  middleware.py
agent_app/model/: factory.py
agent_app/rag/: rag_service.py  vector_store.py
agent_app/utils/: __init__.py  config_handler.py  file_handler.py  logger_handler.py  path_tool.py  prompt_loader.py
config/: chroma.yml  logging.yml  rag.yml
docs/: LangChain功能覆盖分析.md  LangChain知识点大全.md  QQ机器人LangChain功能设计.md
docs/agent_app/: 会话记忆存储说明.md  会话记忆实施方案-checkpointer与截断.md
docs/project/: QQ机器人官方API与go-cqhttp和NoneBot说明.md  QQ群机器人业务架构设计.md  向量库上传功能设计.md  项目完整分析.md  项目架构.md  项目架构描述版.md
docs/python_study/: Python垃圾回收机制详解.md  Python模块代码格式与注释规范.md  Python项目结构学习指南.md  模块生命周期说明.md
prompts/: rag_summarize.txt
require/: requirements.txt
src/plugins/: on_message_example.py  weather.py
